# simple_image_filter

./: README.md  pyproject.toml
simple_image_filter/: pyproject.toml
simple_image_filter/simple_image_filter/: .gitignore
simple_image_filter/simple_image_filter/tests/: test_analyzer.py
simple_image_filter/src/simple_image_filter/: __init__.py  analyzer.py
src/simple_image_filter/: __init__.py  analyzer.py  cli.py  histogram.py
src/simple_image_filter.egg-info/: PKG-INFO  SOURCES.txt
src/simple_image_filter_20250329032741.egg-info/: PKG-INFO  SOURCES.txt
src/simple_image_filter_20250329033156.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simple_image_filter_20250329033722.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_is_image_ok.py
